<resources>
    <string name="app_name">MyGo</string>
    <string name="search_schedules">Search Schedules</string>
    <string name="route">Route</string>
    <string name="select_line">Select Line</string>
    <string name="starting_station">Starting Station</string>
    <string name="ending_station">Ending Station</string>
    <string name="get_schedule">Get Schedule</string>
    <string name="station">Station</string>
    <string name="destination">Destination</string>
    <string name="scheduled">Scheduled</string>
    <string name="stops">Stops</string>
    <string name="platform">Platform</string>
    <string name="status">Status</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
