<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00A25555"
    tools:context=".ui.searchtrainschedules.SearchTrainSchedulesActivity">

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edge"
        android:text="@string/search_schedules"
        android:textSize="@dimen/textSize_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_routeLabel"
        style="@style/label"
        android:text="@string/route"
        app:layout_constraintBottom_toTopOf="@+id/spinner_route"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_header" />

    <Spinner
        android:id="@+id/spinner_route"
        style="@style/dropdown"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_routeLabel" />


    <TextView
        android:id="@+id/textView_startStation"
        style="@style/label"
        app:layout_constraintTop_toBottomOf="@id/spinner_route"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/starting_station"
        />

    <Spinner
        android:id="@+id/spinner_startingStation"
        style="@style/dropdown"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_startStation" />

    <TextView
        android:id="@+id/textView_endStation"
        style="@style/label"
        android:text="@string/ending_station"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_startingStation" />

    <Spinner
        android:id="@+id/spinner_endingStation"
        style="@style/dropdown"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_endStation" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_getSchedules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_schedule"
        android:textAllCaps="false"
        android:letterSpacing="0.05"
        app:cornerRadius="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_endingStation"
        android:layout_marginTop="@dimen/margin_edge"
        />



</androidx.constraintlayout.widget.ConstraintLayout>